force-app/main/default/objects/EXUS__EXUSCreditResponse__c/EXUS__EXUSCreditResponse__c.object-meta.xml
<CustomObject>
    <description>The Experian (US) Credit Response object stores the credit response information received from Experian (US).</description>
    <label>Experian (US) Credit Response</label>
    <nameField>
        <displayFormat>EXUSCREDRESP-{0000}</displayFormat>
        <label>Experian (US) Credit Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experian (US) Credit Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>