force-app/main/default/objects/EXUS__EXUSCreditResponse__c/fields/EXUS__Account__c.field-meta.xml
<CustomField>
    <fullName>EXUS__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the path to the associated relationship.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Experian (US) Credit Responses</relationshipLabel>
    <relationshipName>EXUSCreditResponses</relationshipName>
    <type>Lookup</type>
</CustomField>