force-app/main/default/objects/EXUS__EXUSCreditResponse__c/fields/EXUS__CreditBureauResponse__c.field-meta.xml
<CustomField>
    <fullName>EXUS__CreditBureauResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the path to the associated normalized credit response.</description>
    <label>Normalized Credit Response</label>
    <referenceTo>SCOC__CreditBureauResponse__c</referenceTo>
    <relationshipLabel>Experian (US) Credit Responses</relationshipLabel>
    <relationshipName>EXUSCreditResponses</relationshipName>
    <type>Lookup</type>
</CustomField>