force-app/main/default/objects/EXUS__EXUSCreditResponse__c/fields/EXUS__SCOCInteraction__c.field-meta.xml
<CustomField>
    <fullName>EXUS__SCOCInteraction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The System automatically populates this optional field as a link to the SCOCInteraction__c object parent. By default, it is blank.</description>
    <label>SCOCInteraction</label>
    <referenceTo>SCOC__SCOCInteraction__c</referenceTo>
    <relationshipLabel>Experian (US) Credit Responses</relationshipLabel>
    <relationshipName>EXUSCreditResponses</relationshipName>
    <type>Lookup</type>
</CustomField>