force-app/main/default/objects/EXUS__EXUSCreditResponse__c/fields/EXUS__Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>EXUS__Transaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the path to the associated transaction log.</description>
    <label>Transaction Log</label>
    <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
    <relationshipLabel>Experian (US) Credit Responses</relationshipLabel>
    <relationshipName>EXUSCreditResponses</relationshipName>
    <type>Lookup</type>
</CustomField>